--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "antd": "^5.17.0",
     "dayjs": "^1.11.11",
     "firebase": "^10.11.1",
+    "lodash": "^4.17.21",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/firebase": "^3.2.1",
+    "@types/lodash": "^4.17.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
